[package]
name = "proto-packet-core"
version = "0.0.0"
description = "This library holds the core of the ProtoPacket framework."
readme = "README.md"
repository = "https://github.com/nikdeapen/proto-packet-core"
homepage = "https://github.com/nikdeapen/proto-packet-core"
authors = ["Nik Deapen <nik@deapen.com>"]
edition = "2021"
license = "MIT"

[dependencies]
code-gen = { git = "https://github.com/nikdeapen/code-gen" }
#code-gen = { path = "../code-gen" }

[features]
rust = ["code-gen/rust"]
